# Wave-equation-Migration-Velocity-Analysis-Using-Plane-wave-based-CIGs

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml
datagen/: README.md  metrics.json
datagen/inversion/: fffs_20iter.npy  misfits_20iter.npy
datagen/scripts/: gen_shots_taup.py
pwmva_torch/: __init__.py  device.py  image_ops.py  inversion.py  io.py  source.py
pwmva_torch/fd2d/: __init__.py  pml.py  pw1_modeling.py  pw1_rtm.py  stencil.py  wavepath.py
results/: fffs_iter1-5.npy  fffs_iter21-30.npy  fffs_iter6-20.npy  misfits_iter1-5.npy  misfits_iter21-30.npy  misfits_iter6-20.npy
scripts/: bench_fwd.py  compare_convergence.py  compare_velinv.py  run_iter.py
tests/: _viz.py  conftest.py  test_parity_fd_modeling.py  test_parity_image_ops.py  test_parity_iter1.py  test_parity_rtm.py  test_parity_source.py  test_parity_wavepath.py
