[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pwmva_torch"
version = "0.1.0"
description = "PWEMVA GPU accelerated reproduction (PyTorch)"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.4",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "matplotlib>=3.7",
  "numba>=0.58",
]

[tool.setuptools.packages.find]
include = ["pwmva_torch*"]
